[project]
name = "formatting-issue"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthieu Sarter",email = "matthieu@sarter.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff (>=0.11.2,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
